--- a/front-ressources-relationnelles/src/app/app.component.html
+++ b/front-ressources-relationnelles/src/app/app.component.html
@@ -1,2 +1,11 @@
-<app-left-side-bar style="float:left; background-color: brown;"></app-left-side-bar>
-<p style="background-color: blue;">TEST</p>
+
+
+
+<div fxLayout="row" fxFlexAlign="stretch">
+  <div fxFill="40" fxFlex="initial">
+    <app-left-side-bar ></app-left-side-bar>
+  </div>
+  <div fxFill="60"  flFlex="auto">
+    <p  style="background-color: blue;">TEST</p>
+  </div>
+</div>
