--- a/front-ressources-relationnelles/src/app/left-side-bar/left-side-bar.component.html
+++ b/front-ressources-relationnelles/src/app/left-side-bar/left-side-bar.component.html
@@ -1,1 +1,4 @@
-<p>left-side-bar works!</p>
+<div fxFlex="column"  fxLayoutGap="0px">
+    <p style="background-color: brown;">left-side-bar works!</p>
+</div>
+
