feat: add angular material+add icons to side bar

--- a/front-ressources-relationnelles/src/app/left-side-bar/left-side-bar.component.html
+++ b/front-ressources-relationnelles/src/app/left-side-bar/left-side-bar.component.html
@@ -1,4 +1,21 @@
-<div fxFlex="column"  fxLayoutGap="0px">
-    <p style="background-color: brown;">left-side-bar works!</p>
+<div fxFlex="row"  fxLayoutGap="10px" class="borderColor">
+    <div>
+        <div>
+            <img src="./../../assets/images/page-daccueil.png" alt="">
+            <p>Accueil</p>
+        </div>
+        <div>
+            <img src="./../../assets/images/utilisateur.png" alt="">
+            <p>Mon profil</p>
+        </div>
+        <div>
+            <img src="./../../assets/images/papier.png" alt="">
+            <p>Ressources</p>
+        </div>
+        <div>
+            <img src="./../../assets/images/parametres.png" alt="">
+            <p>Paramètres</p>
+        </div>
+    </div>    
 </div>
 
