--- a/front-ressources-relationnelles/src/app/app.component.html
+++ b/front-ressources-relationnelles/src/app/app.component.html
@@ -3,9 +3,9 @@
 
 <div fxLayout="row" fxFlexAlign="stretch">
   <div fxFill="40" fxFlex="initial">
-    <app-left-side-bar ></app-left-side-bar>
+    <app-left-side-bar></app-left-side-bar>
   </div>
-  <div fxFill="60"  flFlex="auto">
-    <p  style="background-color: blue;">TEST</p>
+  <div fxFill="70"  flFlex="auto">
+    <p  style="background-color:bisque;">TEST</p>
   </div>
 </div>
