--- a/front-ressources-relationnelles/src/app/app.component.html
+++ b/front-ressources-relationnelles/src/app/app.component.html
@@ -1,11 +1,11 @@
-
-
-
-<div fxLayout="row" fxFlexAlign="stretch">
-  <div fxFill="40" fxFlex="initial">
-    <app-left-side-bar></app-left-side-bar>
-  </div>
-  <div fxFill="70"  flFlex="auto">
-    <p  style="background-color:bisque;">TEST</p>
+<div style="height: 100%">
+  <app-left-side-bar></app-left-side-bar>
+  <div>
+    <p style="background-color:bisque;">TEST</p>
   </div>
 </div>
+
+
+<!--  <div fxFill="40" fxFlex="initial">-->
+<!--    -->
+<!--  </div>-->
