--- a/front-ressources-relationnelles/src/app/left-side-bar/left-side-bar.component.css
+++ b/front-ressources-relationnelles/src/app/left-side-bar/left-side-bar.component.css
@@ -3,8 +3,37 @@ img {
     height: 30px;
 }
 
-.borderColor{
-    border-color: red;
-    background-color: aquamarine;
+nav{
+  background-color: aquamarine;
+  height: 100%;
+  width: 200px;
+}
+
+.nav-item{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding: 15px 0;
 
 }
+.nav-item img{
+  margin: 0 5px;
+}
+.nav-banner{
+  width: 100%;
+  height:100px ;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color:rgb(3,152,158);
+}
+
+.nav-banner img{
+  width: 100px;
+  height: 100px ;
+}
+.nav-footer{
+  background-color: red;
+  height : 100px;
+}
+
