--- a/front-ressources-relationnelles/src/app/left-side-bar/left-side-bar.component.html
+++ b/front-ressources-relationnelles/src/app/left-side-bar/left-side-bar.component.html
@@ -1,21 +1,28 @@
-<div fxFlex="row"  fxLayoutGap="10px" class="borderColor">
-    <div>
-        <div>
-            <img src="./../../assets/images/page-daccueil.png" alt="">
-            <p>Accueil</p>
-        </div>
-        <div>
-            <img src="./../../assets/images/utilisateur.png" alt="">
-            <p>Mon profil</p>
-        </div>
-        <div>
-            <img src="./../../assets/images/papier.png" alt="">
-            <p>Ressources</p>
-        </div>
-        <div>
-            <img src="./../../assets/images/parametres.png" alt="">
-            <p>Paramètres</p>
-        </div>
-    </div>    
-</div>
+<nav>
+  <div class="nav-banner">
+    <img src="./../../assets/images/logo1.png" alt="logo">
+  </div>
+  <div class="nav-item">
+    <img src="./../../assets/images/page-daccueil.png" alt="">
+    <a>Accueil</a>
+  </div>
+  <div class="nav-item">
+    <img src="./../../assets/images/utilisateur.png" alt="">
+    <a>Mon profil</a>
+  </div>
+  <div class="nav-item">
+    <img src="./../../assets/images/papier.png" alt="">
+    <a>Ressources</a>
+  </div>
+  <div class="nav-item">
+    <img src="./../../assets/images/parametres.png" alt="">
+    <a>Paramètres</a>
+  </div>
+  <div class="nav-footer">
+    <p-avatar icon="pi pi-user" styleClass="mr-2" size="xlarge"></p-avatar>
+  </div>
+</nav>
+
+
+<!--    <div fxFlex="row"  fxLayoutGap="10px" class="borderColor">-->
 
