--- a/front-ressources-relationnelles/src/app/app.component.css
+++ b/front-ressources-relationnelles/src/app/app.component.css
@@ -1,1 +1,13 @@
+.app-container{
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+}
 
+.app-main-container{
+  width: 100%;
+}
+
+*{
+  background-color: whitesmoke;
+}
