--- a/front-ressources-relationnelles/src/app/app.component.html
+++ b/front-ressources-relationnelles/src/app/app.component.html
@@ -1,6 +1,6 @@
-<div style="height: 100%">
+<div class="app-container">
   <app-left-side-bar></app-left-side-bar>
-  <div>
+  <div class="app-main-container">
     <p style="background-color:bisque;">TEST</p>
   </div>
 </div>
