feat: add routes

--- a/front-ressources-relationnelles/src/app/left-side-bar/left-side-bar.component.html
+++ b/front-ressources-relationnelles/src/app/left-side-bar/left-side-bar.component.html
@@ -16,19 +16,19 @@
     </span>
     </div>
     <div class="nav-item-container">
-      <div class="nav-item">
+      <div class="nav-item" routerLink="">
         <img src="./../../assets/images/page-daccueil.png" alt="">
         <a>Accueil</a>
       </div>
-      <div class="nav-item">
+      <div class="nav-item" routerLink="profil">
         <img src="./../../assets/images/utilisateur.png" alt="">
         <a>Mon profil</a>
       </div>
-      <div class="nav-item">
+      <div class="nav-item" routerLink="ressources">
         <img src="./../../assets/images/papier.png" alt="">
         <a>Ressources</a>
       </div>
-      <div class="nav-item">
+      <div class="nav-item" routerLink="parametres">
         <img src="./../../assets/images/parametres.png" alt="">
         <a>Paramètres</a>
       </div>
