--- a/front-ressources-relationnelles/src/app/app.component.html
+++ b/front-ressources-relationnelles/src/app/app.component.html
@@ -1,11 +1,14 @@
-<div class="app-container">
-  <app-left-side-bar></app-left-side-bar>
-  <div class="app-main-container">
-    <p style="background-color:bisque;">TEST</p>
-  </div>
-</div>
-
-
-<!--  <div fxFill="40" fxFlex="initial">-->
-<!--    -->
+<!--<div class="app-container">-->
+<!--  <app-left-side-bar></app-left-side-bar>-->
+<!--  <div class="app-main-container">-->
+<!--    <p style="background-color:bisque;">TEST</p>-->
 <!--  </div>-->
+<!--</div>-->
+
+<app-login-form></app-login-form>
+
+
+
+
+
+
