--- a/front-ressources-relationnelles/src/app/app.component.html
+++ b/front-ressources-relationnelles/src/app/app.component.html
@@ -1,11 +1,11 @@
-<!--<div class="app-container">-->
-<!--  <app-left-side-bar></app-left-side-bar>-->
-<!--  <div class="app-main-container">-->
-<!--    <p style="background-color:bisque;">TEST</p>-->
-<!--  </div>-->
-<!--</div>-->
+<div class="app-container">
+ <app-left-side-bar></app-left-side-bar>
+ <div class="app-main-container">
+   <p style="background-color:bisque;">TEST</p>
+ </div>
+</div>
 
-<app-login-form></app-login-form>
+<!-- <app-login-form></app-login-form> -->
 
 
 
