add service resources to comunicate with the api

--- a/src/app/left-side-bar/left-side-bar.component.html
+++ b/src/app/left-side-bar/left-side-bar.component.html
@@ -5,7 +5,7 @@
     </div>
   </div>
   <div id="menu-container">
-    <div class="nav-banner">
+    <div routerLink="" class="nav-banner">
       <i (click)="closeMenu()" class="pi pi-times"></i>
       <img src="./../../assets/images/logo1.png" alt="logo">
     </div>
