ajout des services dans tous les composants + tests sur le composant profil

--- a/src/app/left-side-bar/left-side-bar.component.html
+++ b/src/app/left-side-bar/left-side-bar.component.html
@@ -16,7 +16,7 @@
     </span>
     </div>
     <div class="nav-item-container">
-      <div class="nav-item" routerLink="">
+      <div class="nav-item" routerLink="home">
         <img src="./../../assets/images/page-daccueil.png" alt="">
         <a>Accueil</a>
       </div>
