--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,1 +1,5 @@
-<p>profile works!</p>
+<div *ngIf="usersExist==true">
+    <p >Il y a {{usersList.length}} profils</p>
+    <p *ngFor="let profil of usersList">{{profil.fullName}} </p>
+</div>
+<p *ngIf="usersExist==false">Il n'y a pas de profils :(</p>
