--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,3 +1,8 @@
+*{
+  background-color: whitesmoke;
+  font-family: "Segoe UI";
+}
+
 .app-container{
   height: 100%;
   display: flex;
@@ -6,8 +11,4 @@
 
 .app-main-container{
   width: 100%;
-}
-
-*{
-  background-color: whitesmoke;
 }
