--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,9 @@
 <div class="app-container">
-  <app-left-side-bar></app-left-side-bar>
-  <router-outlet></router-outlet>
+  <div class="app-main-container">
+<!--    <app-left-side-bar></app-left-side-bar>-->
+<!--    <router-outlet></router-outlet>-->
+    <app-register-form></app-register-form>
+  </div>
 </div>
 
 <!-- <app-login-form></app-login-form> -->
