--- a/src/app/register-form/register-form.component.html
+++ b/src/app/register-form/register-form.component.html
@@ -18,35 +18,35 @@
       <div class="RegisterInputContainer">
         <div class="prenom">
           <label>Prénom</label>
-          <input type="text">
+          <input placeholder="Prénom" type="text">
         </div>
         <div class="nom">
           <label>Nom</label>
-          <input type="text">
+          <input placeholder="Nom" type="text">
         </div>
         <div class="birthday">
           <label>Date de naissance</label>
-          <input type="text">
+          <input type="date">
         </div>
         <div class="city">
           <label>Ville</label>
-          <input type="text">
+          <input placeholder="Ville" type="text">
         </div>
         <div class="address">
           <label>Adresse</label>
-          <input type="text">
+          <input placeholder="Adresse" type="text">
         </div>
         <div class="email">
           <label>Email</label>
-          <input type="mail">
+          <input placeholder="email@xyz.fr" type="mail">
         </div>
         <div class="password">
           <label>Mot de passe</label>
-          <input type="password">
+          <input placeholder="motdepasse" type="password">
         </div>
         <div class="repassword">
           <label>Confirmation</label>
-          <input type="password">
+          <input placeholder="motdepasse" type="password">
         </div>
       </div>
       <button id="RegisterButton">Valider</button>
