--- a/src/app/login-form/login-form.component.html
+++ b/src/app/login-form/login-form.component.html
@@ -25,7 +25,7 @@
           <input type="password" name="password" [(ngModel)]="model.password" #password="ngModel" required />
         </div>
         <div id="LoginButton">
-          <button>Inscription</button>
+          <!-- <button>Inscription</button> -->
           <button>Se connecter</button>
         </div>
       </form>
